// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PricingCard component should render with props 1`] = `
<View
  buttonFont="arial"
  style={
    Array [
      Object {
        "backgroundColor": "white",
        "borderColor": "#e1e8ee",
        "borderWidth": 1,
        "margin": 15,
        "marginBottom": 15,
        "padding": 15,
        "shadowColor": "rgba(0,0,0, .2)",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.5,
        "shadowRadius": 0.5,
      },
      Object {
        "backgroundColor": "peru",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        Object {
          "backgroundColor": "peru",
        },
      ]
    }
  >
    <TextElement
      style={
        Array [
          Object {
            "color": "#2089dc",
            "fontSize": 37.5,
            "fontWeight": "800",
            "textAlign": "center",
          },
          Object {
            "color": "#2089dc",
          },
          Object {
            "fontFamily": "arial",
          },
        ]
      }
    >
      Free
    </TextElement>
    <TextElement
      style={
        Array [
          Object {
            "fontSize": 50,
            "fontWeight": "700",
            "marginBottom": 10,
            "marginTop": 10,
            "textAlign": "center",
          },
          Object {
            "fontFamily": "arial",
          },
        ]
      }
    >
      $0
    </TextElement>
    <TextElement
      style={
        Array [
          Object {
            "color": "#86939e",
            "fontWeight": "600",
            "marginBottom": 5,
            "marginTop": 5,
            "textAlign": "center",
          },
          Object {
            "fontFamily": "arial",
          },
        ]
      }
    >
      1 User
    </TextElement>
    <TextElement
      style={
        Array [
          Object {
            "color": "#86939e",
            "fontWeight": "600",
            "marginBottom": 5,
            "marginTop": 5,
            "textAlign": "center",
          },
          Object {
            "fontFamily": "arial",
          },
        ]
      }
    >
      Basic Support
    </TextElement>
    <TextElement
      style={
        Array [
          Object {
            "color": "#86939e",
            "fontWeight": "600",
            "marginBottom": 5,
            "marginTop": 5,
            "textAlign": "center",
          },
          Object {
            "fontFamily": "arial",
          },
        ]
      }
    >
      All Core Features
    </TextElement>
    <Button
      TouchableComponent={[Function]}
      buttonStyle={
        Array [
          Object {
            "marginBottom": 10,
            "marginTop": 15,
          },
          undefined,
          Object {
            "backgroundColor": "#2089dc",
          },
        ]
      }
      clear={false}
      disabled={false}
      icon={
        <Icon
          color="white"
          name="flight-takeoff"
          raised={false}
          reverse={false}
          reverseColor="white"
          size={15}
          underlayColor="white"
        />
      }
      iconRight={false}
      loadingProps={
        Object {
          "color": "white",
          "size": "small",
        }
      }
      onPress={[Function]}
      raised={false}
      title="GET STARTED"
    />
  </View>
</View>
`;

exports[`PricingCard component should render without issues 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "white",
        "borderColor": "#e1e8ee",
        "borderWidth": 1,
        "margin": 15,
        "marginBottom": 15,
        "padding": 15,
        "shadowColor": "rgba(0,0,0, .2)",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.5,
        "shadowRadius": 0.5,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        undefined,
      ]
    }
  >
    <TextElement
      style={
        Array [
          Object {
            "color": "#2089dc",
            "fontSize": 37.5,
            "fontWeight": "800",
            "textAlign": "center",
          },
          Object {
            "color": "#2089dc",
          },
          undefined,
        ]
      }
    />
    <TextElement
      style={
        Array [
          Object {
            "fontSize": 50,
            "fontWeight": "700",
            "marginBottom": 10,
            "marginTop": 10,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    />
    <TextElement
      style={
        Array [
          Object {
            "color": "#86939e",
            "fontWeight": "600",
            "marginBottom": 5,
            "marginTop": 5,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      1 User
    </TextElement>
    <TextElement
      style={
        Array [
          Object {
            "color": "#86939e",
            "fontWeight": "600",
            "marginBottom": 5,
            "marginTop": 5,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Basic Support
    </TextElement>
    <TextElement
      style={
        Array [
          Object {
            "color": "#86939e",
            "fontWeight": "600",
            "marginBottom": 5,
            "marginTop": 5,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      All Core Features
    </TextElement>
    <Button
      TouchableComponent={[Function]}
      buttonStyle={
        Array [
          Object {
            "marginBottom": 10,
            "marginTop": 15,
          },
          undefined,
          Object {
            "backgroundColor": "#2089dc",
          },
        ]
      }
      clear={false}
      disabled={false}
      icon={
        <Icon
          color="white"
          name="flight-takeoff"
          raised={false}
          reverse={false}
          reverseColor="white"
          size={15}
          underlayColor="white"
        />
      }
      iconRight={false}
      loadingProps={
        Object {
          "color": "white",
          "size": "small",
        }
      }
      onPress={[Function]}
      raised={false}
      title="GET STARTED"
    />
  </View>
</View>
`;
